# PythonThings

./: README.md  pyproject.toml  readme.md
15_langextract/: README.md  main.py  pyproject.toml
15_langextract/data/: .gitkeep
